MosipNexus/UI/k8s/02-service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-ui
  namespace: mosip-nexus
spec:
  selector:
    app: nexus-ui
  ports:
    - name: http
      port: 8501
      targetPort: 8501
